k3s/database/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: postgres

spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.30.81
  ports:
    - name: postgres
      port: 5432
    - name: adminer
      port: 8080
  selector:
    app: postgres
