k3s/database/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: adminer-stripprefix
  namespace: postgres
spec:
  stripPrefix:
    prefixes:
      - /adminer

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: adminer-ingress
  namespace: postgres

spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`192.168.1.37`) && PathPrefix(`/adminer`)
      services:
        - name: postgres
          port: 8080
      middlewares:
        - name: adminer-stripprefix
          namespace: postgres
